Fixed issue add to cart button on iphone5 By:- Ashish

--- a/stylesheets/responsive/media-query-xs.less
+++ b/stylesheets/responsive/media-query-xs.less
@@ -376,8 +376,8 @@
 			}
 			.mz-productlisting-image {
 				img {
-				    max-width: 150px;
-				    max-height: 150px;
+				    max-width: 145px;
+				    max-height: 145px;
 				}
 			}
 			.mz-facets-active {
@@ -402,6 +402,9 @@
 						}
 					}
 				}
+			}
+			.mz-button {
+				font-size: 15px;
 			}
 			.mz-l-paginatedlist-footer {
 				min-height: 156px;
